typo lol whaaaaaaa :(

--- a/programming/python/requests.html
+++ b/programming/python/requests.html
@@ -8,5 +8,5 @@ permalink: /programming/python/requests/
 
 <section>
     <h2>What are Requests?</h2>
-    <p>In this case, requests refers to HTTP requests. This means requesting stuff from a server over the internet. There are many different types of requests. <code>GET</code> means getting something from the server. You do this whenever you are visiting a website. Then, there's <code>POST</code>, which is for updating something on the server. <code>PUT</code>, <code>DELETE</code>, and <code>PATCH</code> are other HTTP request types. However, <code>GET</code> and <code>POST</code> are the two most common ones.s</p>
+    <p>In this case, requests refers to HTTP requests. This means requesting stuff from a server over the internet. There are many different types of requests. <code>GET</code> means getting something from the server. You do this whenever you are visiting a website. Then, there's <code>POST</code>, which is for updating something on the server. <code>PUT</code>, <code>DELETE</code>, and <code>PATCH</code> are other HTTP request types. However, <code>GET</code> and <code>POST</code> are the two most common ones.</p>
 </section>
