--- a/programming/python/pygame/first-game.html
+++ b/programming/python/pygame/first-game.html
@@ -35,6 +35,6 @@ pygame<span style='color:#808030; '>.</span>quit<span style='color:#808030; '>(<
 
 <section>
   <h2>Code Breakdown</h2>
-  <p>Now, we shall break down the code!</p>
+  <p>Now, we will break down the code!</p>
   <p>First of all, we need to import <code>pygame</code> using <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>import</span> pygame</pre>
 </section>
