expand python lists

--- a/programming/python/lists.html
+++ b/programming/python/lists.html
@@ -13,5 +13,11 @@ permalink: /programming/python/lists/
 
 <section>
     <h2>How to Make Lists?</h2>
-    <p>It's quite simple. We just seperate our elements with commas and wrap the entire thing in square brackets (<code>[</code> and <code>]</code>), which tells Python that we're making a list.</p>
+    <p>It's quite simple. We just seperate our elements with commas and wrap the entire thing in square brackets (<code>[</code> and <code>]</code>), which tells Python that we're making a list. We can put whatever we want in there.</p>
+</section>
+
+<section>
+    <h2>Getting and Setting a Value</h2>
+    <p>Getting an element in a list is easy. You do it like this: <code>list[index]</code>. You replace <code>list</code> with the name of the list variable of <code>index</code> with the index of the element in the list. Indexes start at 0 for the first element and keep going up by one.</p>
+    <p>Setting a value is almost exactly the same as setting one. We simply set the element to something. So, we do <code>list[index] = value</code>. It's exactly the same as last time, but we replace value with the value we want to set.</p>
 </section>
