--- a/programming/python/pygame/first-game.html
+++ b/programming/python/pygame/first-game.html
@@ -37,5 +37,5 @@ pygame<span style='color:#808030; '>.</span>quit<span style='color:#808030; '>(<
   <h2>Code Breakdown</h2>
   <p>Now, we will break down the code!</p>
   <p>First of all, we need to import <code>pygame</code> using <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>import</span> pygame</pre>
-  <p>Without it, we wouldn't be able to use <code>pygame</code>. If you receive an error, however, that Pygame isn't defined, then make sure that you correctly <a href="/programming/python/pygame/setup">Setup</a> Pygame.</p>
+  <p>Without it, we wouldn't be able to use <code>pygame</code>. If you receive an error, however, that Pygame isn't defined, then make sure that you correctly <a href="/programming/python/pygame/setup">setup</a> Pygame.</p>
 </section>
