use font awesome exclamation circle for warnings

--- a/programming/python/pygame/first-game.html
+++ b/programming/python/pygame/first-game.html
@@ -30,7 +30,7 @@ pygame<span style='color:#808030; '>.</span>quit<span style='color:#808030; '>(<
 <section>
     <h2>Running the Code</h2>
     <p>To run the code, simply run it like you do a regular Python file.</p>
-    <p><b><u>IMPORTANT:</u></b> Do not name your file <code>pygame.py</code> as you import the <code>pygame</code> module so naming your file <code>pygame.py</code> will make it import itself. Nonsense!!</p>
+    <small><i class="fas fa-exclamation-circle"></i> Do not name your file <code>pygame.py</code> as you import the <code>pygame</code> module so naming your file <code>pygame.py</code> will make it import itself. Nonsense!!</small>
 </section>
 
 <section>
