update flask and pygame tutorials

--- a/programming/python/flask/setup.html
+++ b/programming/python/flask/setup.html
@@ -9,5 +9,5 @@ layout: flask
 <section>
     <h2>Installing Flask</h2>
     <p>Before get to using Flask, we of course need to install Flask. Since Flask is a Python module, we can use <code>pip</code> to install it. So, we run <code>pip install flask</code> in the command line.</p>
-    <p>Once it is finished, Flask will be installed.</p>
+    <p>Once it is finished, Flask should be installed. If it doesn't work, go <a href="/programming/python/articles/troubleshooting-pip/">here</a>.</p>
 </section>
