--- a/programming/python/pygame/setup.html
+++ b/programming/python/pygame/setup.html
@@ -9,5 +9,5 @@ layout: pygame
 <section>
     <h2>Installing Pygame</h2>
     <p>Before get to using Pygame, we of course need to install Pygame. Since Pygame is a Python module, we can use <code>pip</code> to install it. So, we run <code>pip install pygame</code> in the command line.</p>
-    <p>Once it is finished, Pygame will be installed.</p>
+    <p>Once it is finished, Pygame should be installed. If it doesn't work, go <a href="/programming/python/articles/troubleshooting-pip/">here</a>.</p>
 </section>
