replace <code>pygame</code> witth just Pygame whaaaaaaaaaaaa :| screw us

--- a/programming/python/pygame/first-game.html
+++ b/programming/python/pygame/first-game.html
@@ -30,12 +30,12 @@ pygame<span style='color:#808030; '>.</span>quit<span style='color:#808030; '>(<
 <section>
     <h2>Running the Code</h2>
     <p>To run the code, simply run it like you do a regular Python file.</p>
-    <small><i class="fas fa-exclamation-circle"></i> Do not name your file <code>pygame.py</code> as you import the <code>pygame</code> module so naming your file <code>pygame.py</code> will make it import itself. Nonsense!!</small>
+    <small><i class="fas fa-exclamation-circle"></i> Do not name your file <code>pygame.py</code> as you import the Pygame module so naming your file <code>pygame.py</code> will make it import itself. Nonsense!!</small>
 </section>
 
 <section>
   <h2>Code Breakdown</h2>
   <p>Now, we will break down the code!</p>
-  <p>First of all, we need to import <code>pygame</code> using <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>import</span> pygame</pre>
-  <p>Without it, we wouldn't be able to use <code>pygame</code>. If you get an error, however, that Pygame isn't defined, then make sure that you correctly <a href="/programming/python/pygame/setup">setup</a> Pygame.</p>
+  <p>First of all, we need to import Pygame using <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>import</span> pygame</pre>
+  <p>Without it, we wouldn't be able to use Pygame. If you get an error, however, that Pygame isn't defined, then make sure that you correctly <a href="/programming/python/pygame/setup">setup</a> Pygame.</p>
 </section>
