why use jekyll add section

--- a/programming/jekyll/index.html
+++ b/programming/jekyll/index.html
@@ -11,3 +11,7 @@ layout: jekyll
     <p>Jekyll is a static site generator, which means we can write HTML, but without all the hassle. Using Jekyll, we can do things like use layouts and includes so we don't have to repeat ourselves, fancy templating for ease, and more. Jekyll is built using Ruby but you don't need any knowledge of Ruby to follow along.</p>
 </section>
 
+<section>
+    <h2>Why use Jekyll?</h2>
+    <p>First of all, you can use Jekyll to make websites that only require static content. It has quite advanced templating features and has built in blogging support. Another big advantage of Jekyll is that it works well with <a href="https://pages.github.com">GitHub Pages</a>, which is basically free hosting provided by GitHub.</p>
+</section>
