--- a/programming/jekyll/index.html
+++ b/programming/jekyll/index.html
@@ -16,3 +16,8 @@ layout: jekyll
     <p>First of all, you can use Jekyll to make websites that only require static content. It has quite advanced templating features and has built in blogging support. Another big advantage of Jekyll is that it works well with <a href="https://pages.github.com">GitHub Pages</a>, which is basically free hosting provided by GitHub.</p>
     <p>In fact, Learnmonkey uses Jekyll. We chose it because it works well with GitHub Pages and it's templating.</p>
 </section>
+
+<section>
+    <h2>History</h2>
+    <p>Jekyll was written in Ruby by Tom Preston-Warner, the co-founder of GitHub, in 2012</p>
+</section>
