--- a/programming/jekyll/index.html
+++ b/programming/jekyll/index.html
@@ -19,5 +19,5 @@ layout: jekyll
 
 <section>
     <h2>History</h2>
-    <p>Jekyll was written in Ruby by Tom Preston-Warner, the co-founder of GitHub, in 2012</p>
+    <p>Jekyll was written in Ruby by Tom Preston-Werner, the co-founder of GitHub, in 2012</p>
 </section>
