--- a/programming/python/pygame/first-game.html
+++ b/programming/python/pygame/first-game.html
@@ -45,4 +45,6 @@ pygame<span style='color:#808030; '>.</span>quit<span style='color:#808030; '>(<
 pygame<span style='color:#808030; '>.</span>display<span style='color:#808030; '>.</span>set_caption<span style='color:#808030; '>(</span><span style='color:#0000e6; '>"Hello World!"</span><span style='color:#808030; '>)</span>
 </pre>
   <p>We do this to setup the screen using <code>pygame.display.set_mode</code> and then passing in the screen dimensions in the tuple <code>(WIDTH, HEIGHT)</code>. Then, we set the caption, our the title, of our window. The default caption is <code>pygame window</code> but we changed it to be <code>Hello World!</code> which better suits are demo window.</p>
+  <p>And, finally, we have what we call an "<code>Event Loop</code>" which every game will have. It is the loop that runs repeatedly and we put the code we want to run every single millisecond in their such as collision detection, drawing on the screen, etc.</p>
+  <p>Do notice that, in our loop, we have a for loop that checks events. Basically, we use that code to check if the user presses/closes the "X" button or closes the game window and if they do, then we break out of the loop and close the window</p>
 </section>
