code result, add image later...

--- a/programming/python/pygame/first-game.html
+++ b/programming/python/pygame/first-game.html
@@ -48,3 +48,8 @@ pygame<span style='color:#808030; '>.</span>display<span style='color:#808030; '
   <p>And, finally, we have what we call an "<code>Event Loop</code>" which every game will have. It is the loop that runs repeatedly and we put the code we want to run every single millisecond in their such as collision detection, drawing on the screen, etc.</p>
   <p>Do notice that, in our loop, we have a for loop that checks events. Basically, we use that code to check if the user presses/closes the "X" button or closes the game window and if they do, then we break out of the loop and close the window</p>
 </section>
+
+<section>
+  <h1>Code Result</h1>
+  <p>After running the code, we get an empty black window, as seen below!</p>
+</section>
