--- a/programming/python/pygame/first-game.html
+++ b/programming/python/pygame/first-game.html
@@ -52,6 +52,6 @@ pygame<span style='color:#808030; '>.</span>display<span style='color:#808030; '
 <section>
   <h1>Code Result</h1>
   <p>After running the code, we get an empty black window, as seen below!</p>
-  <img src="/images/programming/python/pygame/demo-window.png" alt="Demo Pygame Window">
+  <img src="/images/programming/python/pygame/demo-window.png" alt="Demo Pygame Window" width="500" height="500">
   <p>We will add more to that window in the next tutorial!</p>
 </section>
