--- a/programming/python/pygame/index.html
+++ b/programming/python/pygame/index.html
@@ -9,7 +9,7 @@ permalink: /programming/python/pygame/
 <section>
     <h2>What is Pygame?</h2>
     <p>Pygame is a simple-to-use Python module for 2D game development. It is the most used Python game development framework. It was built over SDL2, a simple graphics library.</p>
-    <img src="/images/programming/python/pygame/pygame_logo.png" alt="Pygame Logo">
+    <a href="https://www.pygame.org" target="_blank"><img src="/images/programming/python/pygame/pygame_logo.png" alt="Pygame Logo"></a>
 </section>
 
 <section>
