edit tutorial index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -14,12 +14,25 @@ layout: default
                     <li><a href="/programming/python/pygame/">Pygame</a></li>
                 </ul>
             </li>
-            <li><a href="/programming/html/">HTML</a></li>
+            <li><a href="/programming/html/">HTML</a>
+                <ul>
+                    <li><a href="/programming/jekyll/">Jekyll</a></li>
+                </ul>
+            </li>
             <li><a href="/programming/css/">CSS</a></li>
             <li><a href="/programming/javascript/">JavaScript</a></li>
             <li><a href="/programming/cpp/">C++</a></li>
             <li><a href="/programming/java/">Java</a></li>
-            <li><a href="/programming/jekyll/">Jekyll</a></li>
+<!--             <li><a href="/programming/jekyll/">Jekyll</a></li> -->
+        </ul>
+    </li>
+</ul>
+
+<h1>Course Index</h1>
+<ul>
+    <li><a href="/programming/">Programming</a>
+        <ul>
+            <li><a href="/programming/web-dev/">Web Dev</a></li>
         </ul>
     </li>
 </ul>
