new feature courses

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -32,7 +32,7 @@ layout: default
 <ul>
     <li><a href="/programming/">Programming</a>
         <ul>
-            <li><a href="/programming/web-dev/">Web Dev</a></li>
+            <li><a href="/programming/courses/web-dev/">Web Dev</a></li>
         </ul>
     </li>
 </ul>
