--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -30,7 +30,7 @@ layout: default
 
 <h1>Course Index</h1>
 <ul>
-    <li><a href="/programming/">Programming</a>
+    <li><a href="/programming/courses/">Programming</a>
         <ul>
             <li><a href="/programming/courses/web-dev/">Web Dev</a></li>
         </ul>
