add article to list

--- a/programming/index.html
+++ b/programming/index.html
@@ -20,6 +20,7 @@ layout: default
     <ul>
         <li><a href="/programming/articles/interpreters-and-compilers/">Interpreters and Compilers</a></li>
         <li><a href="/programming/articles/editing-code/">Editing Code</a></li>
+        <li><a href="/programming/articles/what-programming-language-should-i-learn/">What Programming Language Should I Learn?</a></li>
     </ul>
 </section>
 
