quick programming course layout

--- a/programming/courses/index.html
+++ b/programming/courses/index.html
@@ -1,6 +1,7 @@
 ---
 title: Programming Courses
 permalink: /programming/courses/
-layout: default
+layout: programming-courses
 ---
 <h1>Programming Courses</h1>
+<p>At Learnmonkey, we offer programming courses, find them below.</p>
