--- a/programming/courses/web-dev/index.html
+++ b/programming/courses/web-dev/index.html
@@ -1,6 +1,6 @@
 ---
-title: Web Dev Course
+title: Web Development
 permalink: /programming/courses/web-dev/
-layout: default
+layout: programming-courses
 ---
 <h1>Web Development</h1>
