new language go

--- a/programming/index.html
+++ b/programming/index.html
@@ -12,6 +12,7 @@ layout: default
         <li><a href="/progamming/html/">HTML</a></li>
         <li><a href="/programming/css/">CSS</a></li>
         <li><a href="/programming/javascript/">JavaScript</a></li>
+        <li><a href="/programming/golang/">Go</a></li>
     </ul>
 </section>
 
