--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -23,6 +23,7 @@ layout: default
             <li><a href="/programming/javascript/">JavaScript</a></li>
             <li><a href="/programming/cpp/">C++</a></li>
             <li><a href="/programming/java/">Java</a></li>
+            <li><a href="/programming/golang/">Go</a></li>
 <!--             <li><a href="/programming/jekyll/">Jekyll</a></li> -->
         </ul>
     </li>
