what is go section

--- a/programming/golang/index.html
+++ b/programming/golang/index.html
@@ -5,3 +5,8 @@ layout: golang
 ---
 
 <h1>Introduction to Go</h1>
+
+<section>
+    <h2>What is Go?</h2>
+    <p>Go is a programming language created at Google in 2009. It is compiled, which means that Go is compiled by the Go compiler to binary ones and zeros that your computer can understand.</p>
+</section>
