add installing go section

--- a/programming/golang/environmnt-setup.html
+++ b/programming/golang/environmnt-setup.html
@@ -5,3 +5,12 @@ layout: golang
 ---
 
 <h1>Environment Setup</h1>
+
+<section>
+    <h2>Installing Go</h2>
+    <p>Go to the <a href="https://go.dev/dl/">Go downloads page</a> and install the version for your operating system.</p>
+</section>
+
+<section>
+    <h2>Installing a Code Editor</h2>
+</section>
