--- a/programming/golang/environmnt-setup.html
+++ b/programming/golang/environmnt-setup.html
@@ -7,8 +7,9 @@ layout: golang
 <h1>Environment Setup</h1>
 
 <section>
-    <h2>Installing Go</h2>
-    <p>Go to the <a href="https://go.dev/dl/">Go downloads page</a> and install the version for your operating system.</p>
+    <h2>Downloading Go</h2>
+    <p>First, we will need to install Go. To do that, go to the <a href="https://go.dev/dl/">Go Downloads Page</a> and install the version for your operating system.</p>
+    <small><i class="fas fa-exclamation-circle"></i>Remember to only install the version for your computer, other files will not work!!!</small>
 </section>
 
 <section>
