go install code editor tutorial

--- a/programming/golang/environmnt-setup.html
+++ b/programming/golang/environmnt-setup.html
@@ -8,10 +8,11 @@ layout: golang
 
 <section>
     <h2>Downloading Go</h2>
-    <p>First, we will need to install Go. To do that, go to the <a href="https://go.dev/dl/">Go Downloads Page</a> and install the version for your operating system.</p>
+    <p>First, we will need to install Go. To do that, go to the <a href="https://go.dev/dl/">Go Downloads Page</a> and install the version for your operating system. Simply follow through all of the prompts it gives you and then you will have Go installed!</p>
     <small><i class="fas fa-exclamation-circle"></i>Remember to only install the version for your computer, other files will not work!!!</small>
 </section>
 
 <section>
     <h2>Installing a Code Editor</h2>
+    <p>One of the best editors around for Go is <a href="https://www.sublimetext.com" target="_blank">Sublime Text</a>. We will install that too. To do so, visit the <a href="https://www.sublimetext.com/download" target="_blank">Sublime Text Download Page</a> and select the download file for your operating system. Then, run through the Setup Wizard and you'll have Sublime Text installed!</p>
 </section>
