go environment setup: minor fix

--- a/programming/golang/environmnt-setup.html
+++ b/programming/golang/environmnt-setup.html
@@ -9,7 +9,7 @@ layout: golang
 <section>
     <h2>Downloading Go</h2>
     <p>First, we will need to install Go. To do that, go to the <a href="https://go.dev/dl/">Go Downloads Page</a> and install the version for your operating system. Simply follow through all of the prompts it gives you and then you will have Go installed!</p>
-    <small><i class="fas fa-exclamation-circle"></i>Remember to only install the version for your computer, other files will not work!!!</small>
+    <small><i class="fas fa-exclamation-circle"></i>Remember to only install the version for your computer, or else Go won't work!</small>
 </section>
 
 <section>
