add logo and more

--- a/programming/golang/index.html
+++ b/programming/golang/index.html
@@ -6,7 +6,14 @@ layout: golang
 
 <h1>Introduction to Go</h1>
 
+<img src="https://learnmonkey.github.io/images/programming/golang/go-logo.png" style="width:200%;height:200%;" alt="Go Logo">
+
 <section>
     <h2>What is Go?</h2>
     <p>Go is a programming language created at Google in 2009. It is compiled, which means that Go is compiled by the Go compiler to binary ones and zeros that your computer can understand.</p>
+</section>
+
+<section>
+	<h2>Why use Go?</h2>
+	<p>Go is a popular programming language designed to be static-typed and have a quick run-time like C but also be readable like Python or Javascript.</p>
 </section>
