--- a/programming/index.html
+++ b/programming/index.html
@@ -7,13 +7,18 @@ layout: default
 <section>
     <p>There is lots of programming content on Learnmonkey. Below is a list of programming topics we cover:</p>
     <ul>
+        <li><a href="/">Learnmonkey</a></li>
+        <li><a href="/tutorial-index/">Tutorials</a></li>
+        <li><a href="/about">About</a></li>
         <li><a href="/programming/python/">Python</a></li>
-        <li><a href="/programming/java/">Java</a></li>
-        <li><a href="/progamming/html/">HTML</a></li>
+        <li><a href="/programming/html/">HTML</a></li>
         <li><a href="/programming/css/">CSS</a></li>
         <li><a href="/programming/javascript/">JavaScript</a></li>
         <li><a href="/programming/golang/">Go</a></li>
+        <li><a href="/programming/cpp/">C++</a></li>
+        <li><a href="/programming/java/">Java</a></li>
     </ul>
+    
 </section>
 
 <section>
