go: minor edits

--- a/programming/golang/environment-setup.html
+++ b/programming/golang/environment-setup.html
@@ -8,7 +8,7 @@ layout: golang
 
 <section>
     <h2>Downloading Go</h2>
-    <p>First, we will need to install Go. To do that, go to the <a href="https://go.dev/dl/">Go Downloads Page</a> and install the version for your operating system. Simply follow through all of the prompts it gives you and then you will have Go installed!</p>
+    <p>First, we will need to install Go. To do that, go to the <a href="https://go.dev/dl/">Go downloads page</a> and download the version of the instalerl for your operating system. Simply run the installer and follow through all of the prompts it gives you and then you will have Go installed!</p>
     <small><i class="fas fa-exclamation-circle"></i>Remember to only install the version for your computer, or else Go won't work!</small><br>
     <small><i class="fas fa-exclamation-circle"></i>Remember to add Go to your path so you can access it from your terminal/command line!</small>
 </section>
