--- a/programming/golang/index.html
+++ b/programming/golang/index.html
@@ -15,5 +15,5 @@ layout: golang
 
 <section>
 	<h2>Why use Go?</h2>
-	<p>Although Go is relatively new, Go is gaining popularity quickly. Go is statically-typed so it is fast, like C. It also has similar syntax to C. It is also designed to be readable, like Python or JavaScript.</p>
+	<p>Although Go is relatively new, Go is gaining popularity quickly. Go is statically-typed so it is fast, like C. It also has similar syntax to C and can do many of the same things as C, but with things like memory safety, garbage collection, and more. It is also designed to be readable, like Python or JavaScript.</p>
 </section>
