--- a/programming/golang/index.html
+++ b/programming/golang/index.html
@@ -17,3 +17,8 @@ layout: golang
 	<h2>Why use Go?</h2>
 	<p>Although Go is relatively new, Go is gaining popularity quickly. Go is statically-typed so it is fast, like C. It also has similar syntax to C and can do many of the same things as C, but with things like memory safety, garbage collection, and more. It is also designed to be readable, like Python or JavaScript.</p>
 </section>
+
+<section>
+    <h2>History</h2>
+    <p>Go was designed at Google in 2009 by Robert Griesemer, Rob Pike, and Ken Thompson.</p>
+</section>
