--- a/programming/golang/variables.html
+++ b/programming/golang/variables.html
@@ -17,3 +17,8 @@ layout: golang
     <p>You might think that variables are super useless, but they are one of the most important things in all of programming. Why?</p>
     <p>Well, imagine you were programming a 2d game. When making games, you need to know the position of the player. But you can't know the position. The player decides that. So, you put the position in a variable. Instead of checking the player's position every single time you need to check for collision, etc, you can just access the variable you have instead of using a long function to get the position of the player.</p>
 </section>
+
+<section>
+    <h2>How can I make a variable in Go?</h2>
+    <p>It's actually very easy to make variables in Go. Simply type</p>
+</section>
