making variables section expand

--- a/programming/golang/variables.html
+++ b/programming/golang/variables.html
@@ -19,6 +19,7 @@ layout: golang
 </section>
 
 <section>
-    <h2>How can I make a variable in Go?</h2>
-    <p>It's actually very easy to make variables in Go. Simply type</p>
+    <h2>Making Variables in Go</h2>
+    <p>It's actually very easy to make variables in Go. Simply type <code>var [variable name]</code> to initialize an empty variable. If we want to initialize a variable and set it to a value, we type <code>var [variable name] = [value]</code>.</p>
+    <small><i class="fas fa-exclamation-circle"></i>When you first create a variable, you <strong>MUST</strong> use <code>var</code>.</small>
 </section>
