--- a/programming/python/data-types.html
+++ b/programming/python/data-types.html
@@ -35,7 +35,7 @@ permalink: /programming/python/data-types/
 
 <section>
     <h2>None</h2>
-    <p><code>None</code> is basically just a placeholder when there is nothing. <code>None</code> is actually its own data type, called "NoneType". It may seem awkward since None is like a Boolean, but None is actually very different.</p>
+    <p><code>None</code> is basically just a placeholder when there is nothing. <code>None</code> is actually its own data type, <code>NoneType</code>. It may seem awkward since None is sort of like a boolean, but <code>None</code> is actually a different data type.</p>
 </section>
 
 <section>
