--- a/programming/golang/variables.html
+++ b/programming/golang/variables.html
@@ -25,8 +25,8 @@ layout: golang
     <p>Go is statically-typed, which means that the type of variable (integer, string, boolean, etc.) cannot change. When you make a variable, Go infers the type. Below is some code that will cause an error: </p>
     <pre><code>
 var x = 3;
-x = "Hello World!"</code></pre>
-<!--     <p>If we don't want to use <code>var</code> we can use <code>:=</code>. For example, instead of typing <code>var x = 3</code>, we can do <code>x := 3</code>.</p> -->
+x = "Hello World!"
+    </code></pre>
     <br>
     <p>You could also make a new variable and give it a value without writing <code>var</code> by using an <code>:=</code> operator instead of an equals sign. For example: <code>var x = 3</code> is the same as <code>x := 3</code>. However, you cannot use <code>:=</code> once you have already defined a variable to change its value. Use <code>=</code> for that.</p>
 </section>
