add git to tutorial links and programming index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -24,6 +24,7 @@ layout: default
             <li><a href="/programming/golang/">Go</a></li>
             <li><a href="/programming/cpp/">C++</a></li>
             <li><a href="/programming/java/">Java</a></li>
+            <li><a href="/programming/git/">Git</a></li>
 <!--             <li><a href="/programming/jekyll/">Jekyll</a></li> -->
         </ul>
     </li>
