add git logo to intro to git page

--- a/programming/git/index.html
+++ b/programming/git/index.html
@@ -9,6 +9,7 @@ layout: git
 <section>
     <h2>What is Git?</h2>
     <p>Git is a version-control system, which means that you can track and monitor changes on your code. Git has other features like issues and pull requests too. Git is usually used for source code and collaboration between programmers, but you can use it to do whatever you want.</p>
+    <img src="/images/programming/git/git-logo.png" alt="Git logo">
 </section>
 
 <section>
