--- a/programming/golang/variables.html
+++ b/programming/golang/variables.html
@@ -21,7 +21,7 @@ layout: golang
 <section>
     <h2>Making Variables in Go</h2>
     <p>It's actually very easy to make variables in Go. Simply type <code>var [variable name]</code> to initialize an empty variable. If we want to initialize a variable and set it to a value, we type <code>var [variable name] = [value]</code>.</p>
-    <small><i class="fas fa-exclamation-circle"></i>When you first create a variable, you <strong>MUST</strong> use <code>var</code> or the <i>Walrus Operator</i> (<code>:=</code>).</small>
+    <small><i class="fas fa-exclamation-circle"></i>When you first create a variable, you <strong>MUST</strong> use <code>var</code> or the <code>:=</code>.</small>
     <p>Go is statically-typed, which means that the type of variable (integer, string, boolean, etc.) cannot change. When you make a variable, Go infers the type. Below is some code that will cause an error: </p>
     <pre><code>
 var x = 3;
