expand printing in go

--- a/programming/golang/printing.html
+++ b/programming/golang/printing.html
@@ -5,3 +5,8 @@ layout: golang
 ---
 
 <h1>Printing In Go</h1>
+
+<section>
+	<h2>What is Printing?</h2>
+	<p>In the last tutorial when we made our first program, we wrote <samp>Hello, World!</samp> in the <i>Terminal/Command Prompt</i>. In programming, we call this <u>printing</u>. Printing is an essential but basic part of programming; It's just writing text in the console. If we wanted to create a text-based game, we would use print to show the text in the terminal.</p>
+</section>
