expand printing in go

--- a/programming/golang/printing.html
+++ b/programming/golang/printing.html
@@ -10,3 +10,8 @@ layout: golang
 	<h2>What is Printing?</h2>
 	<p>In the last tutorial when we made our first program, we wrote <samp>Hello, World!</samp> in the <i>Terminal/Command Prompt</i>. In programming, we call this <u>printing</u>. Printing is an essential but basic part of programming; It's just writing text in the console. If we wanted to create a text-based game, we would use print to show the text in the terminal.</p>
 </section>
+
+<section>
+	<h2>How can I print text in Go?</h2>
+	<p>We already know that we can simply write <code>fmt.Println(<i>text</i>)</code> to print stuff in Go. We can change text to be any <a href="/programming/golang/data-types/">Data Type</a> we want (to learn more about Data Types, click the link to see our Data Types tutorial)!</p>
+</section>
