--- a/programming/golang/printing.html
+++ b/programming/golang/printing.html
@@ -21,12 +21,12 @@ layout: golang
 	<p>There are many ways you can use the Go <code>fmt.Println</code> <i>function</i></p>
 	<p>Firstly, you can simply put your text as a single <b>string</b> inside the function. In short, a string is simply a group of <u>characters</u> <strong>STRUNG</strong> together. In Go, we surround strings with double quotation marks (<code>"</code>) and we also end them with double quotation marks</p>
 	<p>For example, some examples of doing this are:</p>
-	<code>fmt.Println("My name is Mr. Monkey!")</code>
+	<code>fmt.Println("My name is Mr. Monkey!")</code><br>
 	<code>fmt.Println("suoguhgo")</code>
 	<br>
 	<p>We can also use <code>fmt.Println</code> to print a number: an integer or decimal(<i>floating point</i>). To do that, we can write <code>fmt.Println(<i>number</i>)</code>.</p>
 	<p>For example, that could look like:</p>
-	<code>fmt.Println(36257265)</code>
+	<code>fmt.Println(36257265)</code><br>
 	<code>fmt.Println(973.256347)</code>
 	<br>
 	<p>Finally, we can place different Data Types in the function, seperated with commas like this:</p>
