go data type tutorial expand

--- a/programming/golang/data-types.html
+++ b/programming/golang/data-types.html
@@ -5,3 +5,28 @@ layout: golang
 ---
 
 <h1>Data Types In Go</h1>
+
+<section>
+    <h2>What is a Data Type?</h2>
+    <p>A data type is a type of data that we can assign to a variable. In Go, we have a few basic data types that we can put together to make complex ones. In this tutorial, we'll be covering the most important ones.</p>
+</section>
+
+<section>
+    <h2>String</h2>
+    <p>A string is some text. If that's hard to remember, think of text as characters strung together on a string. In Go, strings are wrapped in double quotes.</p>
+</section>
+
+<section>
+    <h2>Integer</h2>
+    <p>An integer is a whole number that can be positive or negative. In Go, we simply write out the number, no quotes or anything like that. To make it negative, just add a dash in front of it.</p>
+</section>
+
+<section>
+    <h2>Boolean</h2>
+    <p>Booleans are either true or false. Since computers are made from ones and zeroes, which are equivalent to true and false, you'd imagine booleans are pretty important. In Go, to make a variable true, we simply type <code>true</code>, all lowercase. Liekwise, we type <code>false</code> for false. Booleans are named after the English mathematician George Boole.</p>
+</section>
+
+<section>
+    <h2>Floats</h2>
+    <p>Floats are an abbreviation of floating point numbers. Floats are simply decimals. In Go, there are two types of floats, <code>float32</code> and <code>float64</code>. <code>float64</code> uses 64 bytes of memory, while <code>float32</code> only uses 32 bytes of memory. So, <code>float64</code> can store larger floats and floats with more decimals. However, <code>float64</code> uses more memory, so there is a tradeoff.</p>
+</section>
