--- a/programming/python/data-types.html
+++ b/programming/python/data-types.html
@@ -8,13 +8,13 @@ permalink: /programming/python/data-types/
 
 <section>
     <h2>What is a Data Type?</h2>
-    <p>In Python, the data stored in variables can be stored in many different forms. These forms are called <strong>data types</strong>. There are two different types of data types: the default ones and the custom ones. This tutorial will be covering basic and common default data types.</p>
+    <p>In Python, the data stored in variables can be stored in many different forms. These forms are called <em>data types</em>. There are two different types of data types: the default ones and the custom ones. This tutorial will be covering basic and common default data types.</p>
 </section>
 
 <section>
     <h2>Strings</h2>
     <p>One of the most important data types in all of Python is the string. Put simply, strings are just some text. When we learned to make our very first Python program, we learned that we must wrap text in double or single quotes. Strings are simply the text we wrapped in quotes.</p>
-    <p>If you have trouble remembering this, try and think of strings as strings of characters.</p>
+    <p>If you have trouble remembering this, think of strings as strings of characters.</p>
 </section>
 
 <section>
@@ -24,13 +24,14 @@ permalink: /programming/python/data-types/
 
 <section>
     <h2>Floats</h2>
-    <p>Floats are basically the same as integers and we can do the same things with them. The only difference is that floats are decimals.</p>
+    <p>Floats are basically the same as integers and we can do the same things with them. The only difference is that floats are decimals. Floats are an abbreviation of floating point number.</p>
 </section>
 
 <section>
     <h2>Booleans</h2>
     <p>Although the name might sound exotic, booleans are actually incredibly simple. They are just true or false. Computers are made with trues and falses (also known as ones and zeros) so you'd imagine that booleans are a very important data type.</p>
     <p>To make a boolean have the value of true, we simply type the word "true" but capitalized. So, <code>True</code>. For false, we type <code>False</code>.</p>
+    <p>Booleans are named after the English mathematician George Boole.</p>
 </section>
 
 <section>
@@ -40,5 +41,5 @@ permalink: /programming/python/data-types/
 
 <section>
     <h2>Getting the Type</h2>
-    <p>Now let's say that we want to get the type of something. To do this, we type <code>type()</code>, where you put the variable you want to get the type of in the brackets.</p>
+    <p>To get the type of a variable, we type <code>type()</code>, where you put the variable you want to get the type of in the brackets.</p>
 </section>
